@@ -25,17 +25,20 @@ void query_only(evldns_server_request *srq, void *user_data)
 int main(int argc, char *argv[])
 {
 	int				 s;
-	struct evldns_server_port	*p;
+	struct evldns_server		*p;
 	evldns_callback			 myip, txt;
 
 	event_init();
 	evldns_init();
 
+	/* create an evldns server context */
+	p = evldns_add_server();
+
 	/* create a socket and pass it to evldns */
 	if ((s = bind_to_udp4_port(5053)) < 0) {
 		return EXIT_FAILURE;
 	}
-	p = evldns_add_server_port(s);
+	evldns_add_server_port(p, s);
 
 	/* load a couple of plugins */
 	evldns_load_plugin(p, ".libs/mod_myip.so");
