@@ -9,6 +9,7 @@ extern "C" {
 #include <ldns/ldns.h>
 
 /* forward declarations */
+struct evldns_server;
 struct evldns_server_port;
 struct evldns_server_request;
 
@@ -32,21 +33,22 @@ struct evldns_server_request {
 typedef struct evldns_server_request evldns_server_request;
 
 typedef void (*evldns_callback)(evldns_server_request *request, void *data);
-typedef int (*evldns_plugin_init)(struct evldns_server_port *p);
+typedef int (*evldns_plugin_init)(struct evldns_server *p);
 
 /*
  * exported functions
  */
 
-/* core evdns clone functions */
-struct evldns_server_port *evldns_add_server_port(int socket);
+/* core evdns sort-of-clone functions */
+struct evldns_server *evldns_add_server();
+struct evldns_server_port *evldns_add_server_port(struct evldns_server *, int socket);
 void evldns_server_close(struct evldns_server_port *port);
-void evldns_add_callback(struct evldns_server_port *port, const char *dname, ldns_rr_class rr_class, ldns_rr_type rr_type, evldns_callback callback, void *data);
+void evldns_add_callback(struct evldns_server *server, const char *dname, ldns_rr_class rr_class, ldns_rr_type rr_type, evldns_callback callback, void *data);
 ldns_pkt *evldns_response(const ldns_pkt *request, ldns_pkt_rcode rcode);
 
 /* plugin and function handling functions */
 extern void evldns_init(void);
-extern int evldns_load_plugin(struct evldns_server_port *p, const char *plugin);
+extern int evldns_load_plugin(struct evldns_server *server, const char *plugin);
 extern void evldns_add_function(const char *name, evldns_callback func);
 extern evldns_callback evldns_get_function(const char *name);
 
